user-forgot-backend

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 PORT = 4000
 
-MONGODBCONNECTIONSTRING = mongodb+srv://shansundar345:fPZEUjOmeDxvekbV@cluster0.vui4n.mongodb.net/
+MONGODBCONNECTIONSTRING = mongodb+srv://shansundar345:fPZEUjOmeDxvekbV@cluster0.vui4n.mongodb.net/userlogin
+
+
+JWT_SECRET = SECRET
+
+EMAIL = shansundardev@gmail.com
+EMAIL_PASSWORD = cnhp unsd zrvw nlpl
